--- a/package.json
+++ b/package.json
@@ -9,24 +9,33 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@react-router/node": "^7.0.2",
+    "@netlify/functions": "^3.0.4",
+    "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.0.2",
-    "isbot": "^5.1.17",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.0.2"
+    "@tailwindcss/postcss": "^4.0.16",
+    "@tailwindcss/vite": "^4.0.16",
+    "dompurify": "^3.2.4",
+    "isbot": "^5.1.25",
+    "openai": "^4.90.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.0",
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
-    "@netlify/vite-plugin-react-router": "^0.0.0",
+    "@netlify/vite-plugin-react-router": "^1.0.0",
     "@react-router/dev": "^7.0.2",
     "@types/node": "^20",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.20",
+    "@types/node-fetch": "^2.6.12",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.9",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11",
+    "vite": "^6.2.2",
     "vite-tsconfig-paths": "^5.1.2"
   }
 }
