--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netlify-react-router-template",
+  "name": "desktop-athlete-gpt",
   "private": true,
   "type": "module",
   "scripts": {
@@ -21,7 +21,8 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
     "react-router": "^7.0.2",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@netlify/vite-plugin-react-router": "^1.0.0",
